k8s/infrastructure/monitoring/loki/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: loki
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames: [loki.talmox.hera.home.karlsen.fr]
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: loki, kind: Service, port: 3100}]
