k8s/infrastructure/monitoring/loki/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-loki-ingress
  namespace: loki
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: loki}}
  ingress:
    - {fromEntities: [host], toPorts: [{ports: [{port: '3100', protocol: TCP}]}]}  # Health probes
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: alloy}}], toPorts: [{ports: [{port: '3100', protocol: TCP}]}]}  # Alloy log push
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: grafana}}], toPorts: [{ports: [{port: '3100', protocol: TCP}]}]}  # Grafana queries
    - {fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}}], toPorts: [{ports: [{port: '3100', protocol: TCP}]}]}  # Prometheus scrape
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-loki-egress
  namespace: loki
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: loki}}
  egress:
    - {toEntities: [kube-apiserver]}  # Ring membership / leader election
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: loki}}], toPorts: [{ports: [{port: '11211', protocol: TCP}]}]}  # Memcached
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring, app.kubernetes.io/name: alertmanager}}], toPorts: [{ports: [{port: '9093', protocol: TCP}]}]}  # Ruler -> Alertmanager
